--- a/src/index.html
+++ b/src/index.html
@@ -34,6 +34,7 @@
     <section id="bread" class="border-bottom border-warning d-flex flex-row flex-wrap justify-content-center"></section>
 
   </main>
+  <script src="./scripts/index.js"></script>
 </body>
 
 </html>
